# goose

./: Cargo.toml
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/commands/: info.rs
crates/goose-cli/src/session/: mod.rs  output.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: anthropic.rs  api_client.rs  base.rs  config.rs  lib.rs  mcp_utils.rs  model.rs  openai.rs  openai_compatible.rs  requests.rs  session_context.rs  utils.rs
crates/goose-providers/src/canonical/: README.md  mod.rs  name_builder.rs
crates/goose-providers/src/conversation/: message.rs  mod.rs  token_usage.rs
crates/goose-providers/src/formats/: openai.rs
crates/goose-sdk-types/src/: custom_requests.rs
crates/goose-sdk-types/src/custom_requests/: schedule.rs
crates/goose-sdk/src/: custom_requests.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: state.rs
crates/goose-server/src/routes/: agent.rs  config_management.rs  reply.rs  sampling.rs  session_events.rs
crates/goose/src/: doctor.rs  model.rs  model_config.rs  scheduler.rs  session_context.rs  sources.rs
crates/goose/src/acp/: provider.rs  server.rs
crates/goose/src/agents/: agent.rs  mcp_client.rs  reply_parts.rs
crates/goose/src/config/: declarative_providers.rs  extensions.rs  mod.rs
crates/goose/src/conversation/: message.rs  mod.rs
crates/goose/src/execution/: manager.rs
crates/goose/src/permission/: permission_judge.rs
crates/goose/src/providers/: anthropic.rs  anthropic_def.rs  base.rs  bedrock.rs  canonical.rs  catalog.rs  chatgpt_codex.rs  claude_code.rs  codex.rs  databricks.rs  databricks_v2.rs  gcpvertexai.rs  gemini_oauth.rs  githubcopilot.rs  google.rs  huggingface.rs  init.rs  kimicode.rs  litellm.rs  mod.rs  nanogpt.rs  ollama.rs  openrouter.rs  provider_test.rs  sagemaker_tgi.rs  snowflake.rs  tetrate.rs  xai_oauth.rs
crates/goose/src/security/: adversary_inspector.rs
crates/goose/src/session/: session_manager.rs
crates/goose/src/skills/: mod.rs
crates/goose/tests/: acp_custom_requests_test.rs  agent.rs  providers.rs  session_id_propagation_test.rs
crates/goose/tests/acp_common_tests/: mod.rs
crates/goose/tests/acp_fixtures/: mod.rs  provider.rs
docs/design/: model-council-prd.md
sdk/: Cargo.toml  README.md  justfile
sdk/examples/: PingApple.kt  README.md  ping_apple.py
sdk/src/: lib.rs
ui/desktop/src/acp/: mcp-apps.ts  schedules.ts  sessions.ts  (+1 more)
(+53 files in other folders)
