[package]
name = "goose-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
rmcp = { workspace = true, features = ["server"] }
unicode-normalization = { version = "0.1.22", default-features = false, features = ["std"] }
uuid = { workspace = true, features = ["v7"] }
anyhow.workspace = true
etcetera.workspace = true
once_cell.workspace = true
regex = { workspace = true, features = ["unicode-case", "unicode-perl"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
env-lock.workspace = true
tempfile.workspace = true
